feat: Implementar tipo de pregunta de listado y cantidad por sub-pregunta
- Se añade el tipo de pregunta 'Listado con Cantidad'.\n- Se refactoriza el tipo 'Repartidor' para permitir la configuración de cantidad en cada sub-pregunta de forma individual.\n- Se añade el tipo 'Listado con Cantidad' a las opciones de sub-preguntas del repartidor.\n- Correcciones de UI en botones y limpieza de código duplicado.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -149,6 +149,7 @@
                         <option value="seleccion_multiple">Selección Múltiple</option>
                         <option value="seleccion_dependiente">Selección Dependiente</option>
                         <option value="repartidor">Repartidor</option>
+                        <option value="listado_definido">Listado con Cantidad</option>
                     </select>
                 </div>
                 <div id="options-group" class="form-group" style="display: none;">
@@ -171,7 +172,7 @@
                     <button type="button" id="add-repartidor-sub-question-btn" class="btn">Añadir Sub-pregunta</button>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" id="enable-quantity-group" style="display: none;">
                     <label><input type="checkbox" id="enable-quantity-checkbox"> Habilitar Cantidad</label>
                 </div>
                 <div id="quantity-group" class="form-group" style="display: none;">
